# NativeDrawer

./: .gitignore  Cargo.toml  LICENCE-MIT  README.MD  flake.nix  rust-toolchain.toml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: android.rs  app.rs  lib.rs  user_input.rs
